Added Pixels Resource

--- a/Resources/pixels.html
+++ b/Resources/pixels.html
@@ -1,52 +1,69 @@
 <html>
 <head>
 <style>
-    .25px{
-        width:5px;
-        height:5px;
-        background-color:blue;
-        margin:10px 0;
-    }
-    .36px{
-        width:6px;
-        height:6px;
-        background-color:blue;
-        margin:10px 0;
-    }
-    .49px{
-        width:7px;
-        height:7px;
-        background-color:blue;
-        margin:10px 0;
-    }
-    .64px{
-        width:8px;
-        height:8px;
-        background-color:blue;
-        margin:10px 0;
-    }
-    .81px{
-        width:9px;
-        height:9px;
-        background-color:blue;
-        margin:10px 0;
-    }
-    .100px{
-        width:10px;
-        height:10px;
-        background-color:blue;
-        margin:10px 0;
-    }
+body{
+    font-family:'Arial', sans-serif;
+}
+.box5{
+    background-color:blue;
+    width:5px;
+    height:5px;
+    margin:10px 0;
+}
+.box6{
+    background-color:blue;
+    width:6px;
+    height:6px;
+    margin:10px 0;
+}
+.box7{
+    background-color:blue;
+    width:7px;
+    height:7px;
+    margin:10px 0;
+}
+.box8{
+    background-color:blue;
+    width:8px;
+    height:8px;
+    margin:10px 0;
+}
+.box9{
+    background-color:blue;
+    width:9px;
+    height:9px;
+    margin:10px 0;
+}
+.box10{
+    background-color:blue;
+    width:10px;
+    height:10px;
+    margin:10px 0;
+}
+.box15{
+    background-color:red;
+    width:calc(50*15px);
+    height:calc(40*15px);
+    margin:10px 0;
+}
+.box20{
+    background-color:blue;
+    width:20px;
+    height:20px;
+    margin:10px 0;
+}
 </style>
 </head>
 <body>
 
-<div class='25px'></div>
-<div class='36px'></div>
-<div class='49px'></div>
-<div class='64px'></div>
-<div class='81px'></div>
-<div class='100px'></div>
+5x5<div class='box5'></div>
+6x6<div class='box6'></div>
+7x7<div class='box7'></div>
+8x8<div class='box8'></div>
+9x9<div class='box9'></div>
+10x10<div class='box10'></div>
+15x15<div class='box15'></div>
+20x20<div class='box20'></div>
 
 </body>
 </html>
