--- a/Resources/pixels.html
+++ b/Resources/pixels.html
@@ -42,8 +42,8 @@ body{
 }
 .box15{
     background-color:red;
-    width:calc(50*15px);
-    height:calc(40*15px);
+    width:15px;
+    height:15px;
     margin:10px 0;
 }
 .box20{
